<resources>
    <string name="app_name">IEEEZSB</string>

    <string name="user_id">User ID</string>
    <string name="name">Name</string>
    <string name="community">Community</string>
    <string name="phone">Phone</string>
    <string name="personal_mail">Personal Mail</string>
    <string name="ieee_email">IEEE Email</string>

    
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_profile">Profile</string>
    <string name="action_settings2">Settings</string>
    <string name="add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="can_be_empty">This field can be empty</string>
    <string name="user_items" />

    <string-array name="user_items">
        <item>Ahmed</item>
        <item>Moahmed</item>
    </string-array>
</resources>
