<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e7f5ff"
        android:orientation="vertical">


        <include
            android:id="@+id/add_user_toolbar"
            layout="@layout/bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/textView2"
            style="@style/UserAddTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textColor="#14c4ca"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/user_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName|textCapWords" />


        <TextView
            android:id="@+id/textView1"
            style="@style/UserAddTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/user_id"
            android:textColor="#14c4ca"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/user_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/can_be_empty"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/textView3"
            style="@style/UserAddTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/community"
            android:textColor="#14c4ca"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/community_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView4"
            style="@style/UserAddTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textColor="#14c4ca"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView5"
            style="@style/UserAddTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/personal_mail"
            android:textColor="#14c4ca"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/personal_mail_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textEmailAddress" />


        <TextView
            android:id="@+id/textView6"
            style="@style/UserAddTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/ieee_email"
            android:textColor="#14c4ca"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/ieee_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/can_be_empty"
            android:inputType="textEmailAddress" />


        <TextView
            android:id="@+id/textView7"
            style="@style/UserAddTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Password"
            android:textColor="#14c4ca"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/passwordIeee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/can_be_empty"
            android:inputType="textPassword" />


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="end"
            android:orientation="horizontal"
            android:padding="10dp">


            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_margin="24dp"
                android:background="@drawable/cancel_button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@android:string/cancel"
                android:textColor="#b5c4da"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/add_user_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/add_button"
                android:clickable="true"
                android:fadingEdge="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/add"
                android:textColor="#b5c4da"
                android:textSize="30sp" />


        </GridLayout>

    </LinearLayout>


</ScrollView>

